[package]
name = "etsi_gs_qkd_014_referenceimplementation"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-tls = "3"
actix-web = { version = "4", features = ["openssl"] }
base64 = "0.13.0"
diesel = { version = "2.0.0", features = ["postgres", "uuid"] }
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4"
openssl = { version = "0.10", features = ["v110"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
uuid = { version = "1.1.2", features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
temp-env = "0.3.1"
test-case = "2.2.1"
